Minor bugfix on menu on small screens

--- a/css/bibsdb.styles.css
+++ b/css/bibsdb.styles.css
@@ -435,20 +435,21 @@ h6 {
   }
 }
 
-/* line 61, ../sass/framework/_bibsdb.navigation.scss */
-.secondary-menu {
-  font-size: 110%;
+@media only screen and (min-width: 769px) {
+  /* line 61, ../sass/framework/_bibsdb.navigation.scss */
+  .secondary-menu {
+    font-size: 110%;
+  }
 }
-
-/* line 67, ../sass/framework/_bibsdb.navigation.scss */
+/* line 68, ../sass/framework/_bibsdb.navigation.scss */
 .main-menu .menu-item, .secondary-menu .menu-item {
   color: white;
 }
-/* line 69, ../sass/framework/_bibsdb.navigation.scss */
+/* line 70, ../sass/framework/_bibsdb.navigation.scss */
 .main-menu .menu-item:hover, .secondary-menu .menu-item:hover {
   color: #7fc241;
 }
-/* line 72, ../sass/framework/_bibsdb.navigation.scss */
+/* line 73, ../sass/framework/_bibsdb.navigation.scss */
 .main-menu .menu-item.active, .secondary-menu .menu-item.active {
   color: #7fc241;
   font-family: "SourceSansProSemibold";
@@ -457,27 +458,27 @@ h6 {
 
 /* Sub menu
    ========================================================================== */
-/* line 82, ../sass/framework/_bibsdb.navigation.scss */
+/* line 83, ../sass/framework/_bibsdb.navigation.scss */
 h2.sub-menu-title {
   font-family: "SourceSansProSemibold";
   font-weight: normal;
 }
 
-/* line 86, ../sass/framework/_bibsdb.navigation.scss */
+/* line 87, ../sass/framework/_bibsdb.navigation.scss */
 .sub-menu {
   margin-bottom: 20px;
 }
-/* line 89, ../sass/framework/_bibsdb.navigation.scss */
+/* line 90, ../sass/framework/_bibsdb.navigation.scss */
 .sub-menu > li a {
   color: rgba(0, 0, 0, 0.7);
   padding-top: 5px;
   padding-bottom: 3px;
 }
-/* line 94, ../sass/framework/_bibsdb.navigation.scss */
+/* line 95, ../sass/framework/_bibsdb.navigation.scss */
 .sub-menu > li a:hover {
   color: rgba(0, 0, 0, 0.7);
 }
-/* line 101, ../sass/framework/_bibsdb.navigation.scss */
+/* line 102, ../sass/framework/_bibsdb.navigation.scss */
 .sub-menu li:before {
   color: rgba(0, 0, 0, 0.7);
   font-size: 100%;
